infrastructure/eks/api-deployment.yaml
# ---- BACKEND JAVA ----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infoline-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infoline-api
  template:
    metadata:
      labels:
        app: infoline-api
    spec:
      containers:
        - name: infoline-api
          image: infoline-hello:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: infoline-api-svc
spec:
  selector:
    app: infoline-api
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer

---
# ---- FRONTEND ANGULAR ----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infoline-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infoline-frontend
  template:
    metadata:
      labels:
        app: infoline-frontend
    spec:
      containers:
        - name: infoline-frontend
          image: infoline-frontend:latest
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: infoline-frontend-svc
spec:
  selector:
    app: infoline-frontend
  ports:
    - port: 80
      targetPort: 4200
  type: LoadBalancer
